--- a/packages/bridge/package.json
+++ b/packages/bridge/package.json
@@ -16,6 +16,7 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "test": "vitest",
+    "test:deposit": "tsx test-deposit.ts",
     "lint": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
@@ -24,6 +25,8 @@
     "viem": "^2.21.0"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
+    "tsx": "^4.7.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.3",
     "vitest": "^1.0.0"
