--- a/packages/compliance/package.json
+++ b/packages/compliance/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rwa-lifecycle/compliance",
   "version": "1.0.0",
-  "description": "KYC/AML compliance module",
+  "description": "On-chain compliance verification for RWA tokens (ERC3643 & custom implementations)",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -20,8 +20,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "viem": "^2.21.0",
-    "zod": "^3.22.4"
+    "viem": "^2.21.0"
   },
   "devDependencies": {
     "tsup": "^8.0.0",
