--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts --clean",
     "dev": "tsup src/index.ts --format esm --dts --watch",
-    "test": "vitest",
+    "test": "vitest run",
     "lint": "tsc --noEmit",
     "clean": "rm -rf dist",
     "cli": "node ./dist/index.js"
