--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
-    "test": "vitest",
+    "test": "vitest run",
     "lint": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
