--- a/packages/relayer/package.json
+++ b/packages/relayer/package.json
@@ -19,7 +19,7 @@
     "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts src/cli.ts --format cjs,esm --dts --watch",
     "start": "node ./dist/cli.js",
-    "test": "vitest",
+    "test": "vitest run",
     "lint": "tsc --noEmit",
     "clean": "rm -rf dist"
   },
